[gd_scene load_steps=7 format=3 uid="uid://dorvfpohkstmf"]

[ext_resource type="Script" path="res://level/obstacles/spikes/spikes.gd" id="1_4v3p1"]
[ext_resource type="Texture2D" uid="uid://x4rgxwv2gv4n" path="res://level/obstacles/spikes/spikes.png" id="1_est56"]
[ext_resource type="Script" path="res://level/obstacles/death_zone/death_zone.gd" id="1_t7e7f"]
[ext_resource type="Texture2D" uid="uid://cimfy5dr3o845" path="res://level/obstacles/spikes/spikes_hidden.png" id="3_l8eg2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7n63h"]
size = Vector2(64, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfu1g"]
size = Vector2(64, 16)

[node name="Spikes" type="Node2D"]
script = ExtResource("1_4v3p1")
spikes_out_texture = ExtResource("1_est56")
spikes_in_texture = ExtResource("3_l8eg2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("1_est56")

[node name="DeathZone" type="Area2D" parent="."]
collision_mask = 6
script = ExtResource("1_t7e7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_7n63h")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_nfu1g")

[node name="SwitchingTimer" type="Timer" parent="."]
one_shot = true

[node name="DetectionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DeathZone" to="DeathZone" method="_on_body_entered"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="timeout" from="SwitchingTimer" to="." method="_on_switching_timer_timeout"]
[connection signal="timeout" from="DetectionTimer" to="." method="_on_detection_timer_timeout"]
